# celerityui

./: .clang-format  CMakeLists.txt  README.md
examples/many_moving_rectangles/: many_moving_rectangles.cpp
examples/simple_window/: simple_window.cpp
src/: celerityui.h  display.cpp  internal.cpp  internal.hpp  logger.hpp  rects.cpp  rects.hpp  shader.cpp  shader.hpp  vao.cpp  vao.hpp
